Fix alignment

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -7,6 +7,7 @@
 .footer {
   max-width: 1350px;
   padding-inline: 30px;
+  margin-inline: auto;
   display: flex;
   justify-content: space-between;
 }
